condition variable 현재 구현 분석 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -379,6 +379,7 @@ But they don't deal with how to control the order in the interdependent threads.
 Condition variable defines how the dependent thread give the control flow to the responsible thread and take it back.
 
 If a thread(Thread A) want to access the common resource after the another thread(Thread B) work on that common value, it uses condition variable.
+In this case, the "condition" is "Is Thread B finished its work?". The Thread A waits for the condition become true, and the Thread B sends signal to Thread A if the condition satisfied. 
 Here is the brief explanation of how condition variable works using a lock and a semaphore.
 
 - First, the Thread A needs to lock the common resource and acquire to prevent other threads to access.
