Optimization 구현 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -424,6 +424,10 @@ After calling `cond_signal()`, the caller can release the lock.
 
 ### Optimization barrier
 
+An optimization barrier is the barrier to indicate compiler not to optimize or reorder across it.
+Without the barrier, the compiler is free to optimize and to reorder the instructions and this would result the buggy program.
+Because the order of the instructions do an important role in the synchronization problem.
+
 # Requirements
 
 ## Alarm Clock
