Disabling interrupts 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -290,6 +290,15 @@ invoke `thread_schedule_tail()` and switch to the next thread.
 
 ## Syncronization Primitives
 
+### Disabling interrupts
+When dealing with the synchronization problems, it is important to assure that the preemption is not occur in the middle executing the atomic function.
+So, it is necessary to prevent the preemption occurs.
+In pintos, the preemption occurs when the `thread_ticks` get greater than `TIME_SLICE`.
+The `thread_ticks` is increased by the `thread_tick()` which is called by the external interrupt handler `timer_interrupt()`.
+Thus, disabling the interrupt can be the solution.
+The interrupt can be controlled manually via the functions defined in `src/interrupt.c`.
+Specifically, disabling interrupts can be done by `intr_disable()` and can rollback interrupts by `intr_set_level()`.
+
 ### Semaphore
 A semaphore is a type of synchronization that is invented to control access to a common resource shared by multiple threads.
 
