--- a/docs/p1.md
+++ b/docs/p1.md
@@ -288,7 +288,7 @@ In summary, the roles of `kernel_thread_frame`, `switch_entry_frame`, and `switc
 correct execution environment for the first thread. This setup ensures that the initial thread can seamlessly
 invoke `thread_schedule_tail()` and switch to the next thread.
 
-## Syncronization Primitives
+## Synchronization Primitives
 
 ### Disabling interrupts
 When dealing with the synchronization problems, it is important to assure that the preemption is not occur in the middle executing the atomic function.
@@ -329,7 +329,7 @@ A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_
 - `sema_up()` : V. If `waiters` is not empty (i.e. there are threads that want to access the critical section), the front thread is popped by `list_pop_front()`.
   Then the popped thread take access to critical section. Regardless of `waiters`, `sema_ip()` increments the `value`.
 
-In genenral, according to the definition of the semaphore, the value of the semaphore should be initialized to a positive number depending on the number of resources available.
+In general, according to the definition of the semaphore, the value of the semaphore should be initialized to a positive number depending on the number of resources available.
 However, we can find that pintos initialize the value with zero and then call `sema_down()`.
 In this case, the caller (i.e. the thread which initialized the semaphore and called `sema_down()`) immediately pushed into `waiters` and then blocked.
 As the caller whose state was running is blocked, another thread in the ready list is selected and become the next running thread.
