--- a/docs/p1.md
+++ b/docs/p1.md
@@ -17,31 +17,34 @@ Team Number: 20
 - [Analysis of the current implementation](#analysis-of-the-current-implementation)
     * [Threads](#threads)
         + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
+        + [Thread Memory Layout](#thread-memory-layout)
         + [Thread State](#thread-state)
     * [Thread Switching](#thread-switching)
+        + [Overview](#overview)
         + [`schedule()`](#-schedule---)
         + [`switch_threads()`](#-switch-threads---)
         + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
-    * [Syncronization Primitives](#syncronization-primitives)
-        + [Lock](#lock)
+    * [Synchronization](#synchronization)
+        + [Disabling interrupts](#disabling-interrupts)
         + [Semaphore](#semaphore)
+        + [Lock](#lock)
         + [Condition Variable](#condition-variable)
         + [Optimization barrier](#optimization-barrier)
 - [Requirements](#requirements)
     * [Alarm Clock](#alarm-clock)
-        + [Overall structure](#overall-structure)
+        + [Overview of Current Implementation](#overview-of-current-implementation)
         + [Data Structures](#data-structures)
         + [Algorithms](#algorithms)
         + [Implementation](#implementation)
         + [Rationale](#rationale)
     * [Priority Scheduling](#priority-scheduling)
-        + [Overall structure](#overall-structure-1)
+        + [Overview of Current Implementation](#overview-of-current-implementation-1)
         + [Data Structures](#data-structures-1)
         + [Algorithms](#algorithms-1)
         + [Implementation](#implementation-1)
         + [Rationale](#rationale-1)
     * [Advanced Scheduler](#advanced-scheduler)
-        + [Overall structure](#overall-structure-2)
+        + [Overview of Current Implementation](#overview-of-current-implementation-2)
         + [Data Structures](#data-structures-2)
         + [Algorithms](#algorithms-2)
         + [Implementation](#implementation-2)
@@ -288,7 +291,7 @@ In summary, the roles of `kernel_thread_frame`, `switch_entry_frame`, and `switc
 correct execution environment for the first thread. This setup ensures that the initial thread can seamlessly
 invoke `thread_schedule_tail()` and switch to the next thread.
 
-## Synchronization Primitives
+## Synchronization
 
 ### Disabling interrupts
 When dealing with the synchronization problems, it is important to assure that the preemption is not occur in the middle executing the atomic function.
