문법 및 어색한 문장 교정

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -294,29 +294,25 @@ invoke `thread_schedule_tail()` and switch to the next thread.
 ## Synchronization
 
 ### Disabling interrupts
-When dealing with the synchronization problems, it is important to assure that the preemption is not occur in the middle executing the atomic function.
-So, it is necessary to prevent the preemption occurs.
-In pintos, the preemption occurs when the `thread_ticks` get greater than `TIME_SLICE`.
-The `thread_ticks` is increased by the `thread_tick()` which is called by the external interrupt handler `timer_interrupt()`.
-Thus, disabling the interrupt can be the solution.
+When dealing with synchronization problems, ensuring that preemption does not occur while executing the atomic function is crucial.
+So, it is necessary to prevent the preemption from occurring.
+In pintos, the preemption occurs when the `thread_ticks` gets greater than `TIME_SLICE`.
+The `thread_ticks` is increased by the `thread_tick()`, called by the external interrupt handler `timer_interrupt()`.
+Thus, turning off the interrupt can be the solution.
 The interrupt can be controlled manually via the functions defined in `src/interrupt.c`.
-Specifically, disabling interrupts can be done by `intr_disable()` and can rollback interrupts by `intr_set_level()`.
+Specifically, disabling interrupts can be done by `intr_disable()` and rollback interrupts by `intr_set_level()`.
 
 ### Semaphore
-A semaphore is a type of synchronization that is invented to control access to a common resource shared by multiple threads.
-
-The semaphore S is a variable that holds a integer value, and this value can be accessed and edited by only two operators denoted P and V.
-
-The integer value holds by the semaphore is the number of the units that are currently available.
-
-P is called before a thread is trying to access the critical section(common resource that should not be accessed by two or more threads).
+A semaphore is a synchronization primitive invented to control access to a common resource shared by multiple threads.
+The semaphore S is a variable that holds an integer value, and this value can be accessed and edited by only two operators, P and V.
+The integer value held by the semaphore is the number of currently available units.
+A thread calls P before accessing the critical section(a shared resource that two or more threads should not access).
 If the semaphore value is over 1, decrement the value and enter the critical section.
-If not, the thread waits until the value be positive, then enter the critical section, decrementing the value.
+If not, the thread waits until the value is positive, then enters the critical section, decrementing the value.
+A thread calls V after completing the operation in the critical section.
+V increments the semaphore value.
 
-V is called after a thread complete the operation in the critical section.
-V simply increments the semaphore value.
-
-In pintos, `semaphore` is implemented as a structure.
+Pintos implemented a semaphore as follows.
 ```c++
 struct semaphore
   {
@@ -326,43 +322,41 @@ struct semaphore
 ```
 A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_down()` is implemented.
 
-- `sema_init()`: Set an initial value for the variable `value` and initiate a list `waiters`.
-- `sema_down()`: P. If `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and blocked by `thread_block()`.
-  when the `value` became positive, the caller thread decrement the `value` and return to access the critical section.
-- `sema_up()` : V. If `waiters` is not empty (i.e. there are threads that want to access the critical section), the front thread is popped by `list_pop_front()`.
-  Then the popped thread take access to critical section. Regardless of `waiters`, `sema_ip()` increments the `value`.
+- `sema_init()`: Set an initial value for the variable `value` and initiate a list, `waiters`.
+- `sema_down()`: P. If the `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and blocked by `thread_block()`. When the `value` becomes positive, the caller thread decrements the `value` and returns to access the critical section.
+- `sema_up()`: V. If `waiters` is not empty (i.e., there are threads that want to access the critical section), the front thread is popped by `list_pop_front()`. Then, the popped thread takes access to the critical section. Regardless of `waiters`, `sema_up()` increments the `value`.
 
-In general, according to the definition of the semaphore, the value of the semaphore should be initialized to a positive number depending on the number of resources available.
+According to the semaphore definition, it seems normal to initialize the semaphore's value to a positive number depending on how many resources are available.
 However, we can find that pintos initialize the value with zero and then call `sema_down()`.
-In this case, the caller (i.e. the thread which initialized the semaphore and called `sema_down()`) immediately pushed into `waiters` and then blocked.
-As the caller whose state was running is blocked, another thread in the ready list is selected and become the next running thread.
-The selected running thread do its work and then call `sema_up()` to make the previous running thread become the current running thread again.
-A typical example is the initializing step of the `idle` thread. The `main` thread initialize the semaphore `idle_started` with `value` 0 and call `sema_down` to pass the control flow to `idle` thread.
-After the function `idle()` is started, `idle` thread call `sema_up()` to give the control flow back to the `main` thread.
+In this case, the caller (i.e., the thread that initialized the semaphore and called `sema_down()`) immediately pushed into `waiters` and then blocked.
+As the caller whose state was running is blocked, another thread in the ready list is selected and becomes the following running thread.
+The selected running thread does its job and then calls `sema_up()` to make the previous running thread become the current running thread again.
+A typical example is the initializing step of the `idle` thread. The `main` thread initializes the semaphore `idle_started` with `value` 0 and calls `sema_down` to pass the control flow to the `idle` thread.
+After the function `idle()` is started, the `idle` thread calls `sema_up()` to give the control flow back to the `main` thread.
 
 There are other functions for `semaphore` in pintos, `sema_try_down()` and `sema_self_test()`.
 
-`sema_try_down()` is similar to `sema_down()` as it is a kind of P function. But it works only when the `value` is positive.
-In other words, if the `value` is 0, it returns `false` and the caller neither enter the `waiters` nor becomes blocked.
-If the `value` is positive, it decreases the `value` by 1 and return `true`.
+`sema_try_down()` is similar to `sema_down()` as it is a kind of P function. However, it works only when the `value` is positive.
+In other words, if the `value` is 0, it returns `false`, and the caller neither enters the `waiters` nor becomes blocked.
+If the `value` is positive, it decreases the `value` by one and returns `true`.
 
-`sema_self_test()` is a function for self testing.
+`sema_self_test()` is a function for self-testing.
 
 ### Lock
-A Lock is a synchronization primitives. It is used for controlling access to a common resource like semaphore.
-The semaphore's P(or "down") is "acquire" in the lock and the V (or "up") of the semaphore is "release" in the lock.
+A Lock is a synchronization primitive like a semaphore. It is used for controlling access to a shared resource like semaphore.
+The semaphore's P(or "down") is "acquire" in the lock, and the V (or "up") of the semaphore is "release" in the lock.
 
-There are two main difference between a lock and a semaphore.
+There are two main differences between a lock and a semaphore.
 
 - One is the range of the value can have.
-A Semaphore can have various values bigger than 1, but the value of a lock only can be 0 or 1.
-In other words, a lock is a kind of binary semaphores.
+A Semaphore can have various values larger than 1, but a lock's value can only be 0 or 1.
+In other words, a lock is a binary semaphore.
 
 - Another is the presence of the lock holder.
 In semaphore, there is no owner or holder. It means a thread can "up" the semaphore without being the thread "downed" it.
 In contrast, a lock can only be "released" by the thread that "acquired" it.
 
-In pintos, a lock is implemented by a structure.
+Pintos implemented a lock as follows.
 ```c++
 struct lock
   {
@@ -370,48 +364,43 @@ struct lock
     struct semaphore semaphore;     /* Binary semaphore controlling access */
   };
 ```
-As a lock perform like a binary semaphore, it has a `semaphore` as member variable, and `holder` for the thread holding the lock.
+As a lock performs like a binary semaphore, it has a `semaphore` as a member variable and a `holder` for the thread holding the lock.
+A function `lock_init()` initializes a lock. There are four functions to implement the lock features.
 
-A lock is initialized by `lock_init()`. There are 4 functions to implement the lock features.
-
-- `lock_init()`: Initialize `holder` and `semaphore`. There is no holder at the beginning so initialize `holder` with `NULL`.
-And as the lock is the binary semaphore, `semaphore` is initialized with the value 1.
-- `lock_acquire()`: Checks whether the `holder` is the caller(it must not), and then invoke `sema_down()`. Then set the `holder` the current thread.
+- `lock_init()`: Initialize `holder` and `semaphore`. Initially, there is no holder, so initialize `holder` with `NULL`.
+As the lock is the binary semaphore, `semaphore` is initialized with the value 1.
+- `lock_acquire()`: Checks whether the `holder` is the caller(it must not), and then invoke `sema_down()`. Then, set the `holder` to the current thread.
 - `lock_release()`: Checks whether the `holder` is the caller(it must be), and then set the `holder` NULL. Then invoke `sema_up()`.
-- `lock_try_acquire()`: Lock version of `sema_try_down()`. Acquire the lock only when the lock is acquired by another thread.
+- `lock_try_acquire()`: Lock version of `sema_try_down()`. Acquire the lock only when the `holder` is NULL.
 - `lock_held_by_current_thread()`: `lock_acquire()` and `lock_release()` use this function to check the `holder`.
-It returns `true` if the `holder` is the current thread. Otherwise, it returns `false`. 
-
+It returns `true` if the `holder` is the current thread. Otherwise, it returns `false`.
 
 ### Condition Variable
-
 A condition variable is a synchronization primitive designed to solve a synchronization problem.
 A semaphore and a lock can handle the concurrency problem by limiting the number of threads to access the critical area.
-But they don't deal with how to control the order in the interdependent threads.
-Condition variable defines how the dependent thread give the control flow to the responsible thread and take it back.
+However, they do not focus on controlling the order in the interdependent threads.
+The condition variable defines how the dependent thread gives the control flow to the responsible thread and takes it back.
 
-If a thread(Thread A) want to access the common resource after the another thread(Thread B) work on that common value, it uses condition variable.
-In this case, the "condition" is "Is Thread B finished its work?". The Thread A waits for the condition become true, and the Thread B sends signal to Thread A if the condition satisfied. 
-Here is the brief explanation of how condition variable works using a lock and a semaphore.
+If a thread(Thread A) wants to access the shared resource after another thread(Thread B) works on that shared value, it uses a condition variable.
+In this case, the "condition" is "Is Thread B finished its work?". Thread A waits for the condition to become true, and Thread B signals to Thread A if the condition is satisfied.
+Here is a brief explanation of how the condition variable works using a lock and a semaphore.
 
-- First, the Thread A needs to lock the common resource and acquire to prevent other threads to access.
-- Then it prepares a semaphore with initial value 0 to block itself until the common resource ready.
-- After preparing the semaphore, it releases the lock so that the Thread B can access and blocks itself using the prepared semaphore.
+- First, Thread A needs to lock the common resource and acquire to prevent other threads from accessing.
+- Then, it prepares a semaphore with an initial value of 0 to block itself until the common resource is ready.
+- After preparing the semaphore, it releases the lock and blocks itself using the prepared semaphore so that Thread B can access it.
 - The Thread B acquires the lock and does the work needed on the common resource.
-- When the job done, it sends a signal to the blocked thread, Thread A, which is the V operation of the semaphore.
+- When Thread B finishes the job, it sends a signal to the blocked thread, Thread A, which is the V operation of the semaphore.
 - Finally, it can release the lock for Thread A.
 
-In pintos, a condition variable is implemented by a struct with a single variable.
+Pintos implemented a condition as follows.
 ```c++
 struct condition
   {
     struct list waiters;    /* List of waiting threads */
   };
 ```
-
-The list `waiters` holds the elements of the struct `semaphore_elem`. 
+The list `waiters` holds the struct `semaphore_elem` elements.
 `semaphore_elem` is defined like below.
-
 ```c++
 struct semaphore_elem
   {
@@ -419,26 +408,24 @@ struct semaphore_elem
     struct semaphore semaphore;     /* This semaphore. */
   };
 ```
-
 `condition` is initialized by `cond_init()` and performs its functionality with three functions, `cond_wait()`, `cond_signal()` and `cond_broadcast()`.
-
-- `cond_init()`: Simply initialize the list `waiters`.
+- `cond_init()`: Initialize the list `waiters`.
 - `cond_wait()`: Receives a `lock` as an argument and has a local variable `semaphore_elem` `waiter`.
+
 This `lock` is the lock already acquired by the caller.
-After calling `cond_wait()`, the `waiter` semaphore initialized with the `value` 0 and `list_push_back()`ed into `waiters`. 
-Then the `lock` released and the `waiter` semaphore downed to make the thread wait for "signal".
-As the `lock` released, it can be acquired by other threads. The thread which acquire the `lock` will send the signal to the waiting thread.
-The "signal" will make the semaphore up, and after receiving the signal, the thread re-acquire the lock.
-- `cond_signal()`: Called by the current thread which acquires the lock released in `cond_wait()`.
-Simply makes the first waiting semaphore up (i.e. make the waiting thread be in the ready state).
+
+After calling `cond_wait()`, the `waiter` semaphore initialized with the `value` 0 and `list_push_back()` into `waiters`.
+Then the `lock` released, and the `waiter` semaphore downed to make the thread wait for the "signal".
+As the `lock` is released, it can be acquired by other threads. The thread which acquires the `lock` will send the signal to the waiting thread.
+The "signal" will make the semaphore up, and after receiving the signal, the thread re-acquires the lock.
+- `cond_signal()`: Called by the current thread, which acquires the lock released in `cond_wait()`.
+It makes the first waiting semaphore up (i.e., make the waiting thread ready).
 After calling `cond_signal()`, the caller can release the lock.
 - `cond_broadcast()`: If there is more than one `waiter` in the `waiters`, the caller can send signals to every `waiter` in `waiters` using this function.
 
 ### Optimization barrier
-
-An optimization barrier is the barrier to indicate compiler not to optimize or reorder across it.
-Without the barrier, the compiler is free to optimize and to reorder the instructions and this would result the buggy program.
-Because the order of the instructions do an important role in the synchronization problem.
+An optimization barrier is a barrier to the compiler not optimizing or reordering across it.
+Without the barrier, the compiler can optimize and reorder the instructions, resulting in a buggy program because the order of the instructions plays an important role in the synchronization problem.
 
 # Requirements
 
