Priority Scheduler 계획 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -173,7 +173,7 @@ threads ready to run.
 The above diagram shows the process of thread switching. The current thread is in the `THREAD_RUNNING` state. If a
 thread
 has used up its timeslice, `thread_tick()` (called by `timer_interrupt`) will call the
-function `intr_yield_on_return()`. `intr_yield_on_return()` change `yield_on_return` flag to `true` and let 
+function `intr_yield_on_return()`. `intr_yield_on_return()` change `yield_on_return` flag to `true` and let
 `intr_handler` know. Then, `intr_handler` will call `thread_yield()` to switch to the next thread. `thread_yield()` will
 call `schedule()` and `switch_threads()` to switch to the next thread during interrupt.
 
@@ -320,41 +320,53 @@ struct semaphore
     struct list waiters;    /* List of waiting threads */
   };
 ```
+
 A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_down()` is implemented.
 
 - `sema_init()`: Set an initial value for the variable `value` and initiate a list, `waiters`.
-- `sema_down()`: P. If the `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and blocked by `thread_block()`. When the `value` becomes positive, the caller thread decrements the `value` and returns to access the critical section.
-- `sema_up()`: V. If `waiters` is not empty (i.e., there are threads that want to access the critical section), the front thread is popped by `list_pop_front()`. Then, the popped thread takes access to the critical section. Regardless of `waiters`, `sema_up()` increments the `value`.
+- `sema_down()`: P. If the `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and blocked
+  by `thread_block()`. When the `value` becomes positive, the caller thread decrements the `value` and returns to access the critical section.
+- `sema_up()`: V. If `waiters` is not empty (i.e., there are threads that want to access the critical section), the
+  front thread is popped by `list_pop_front()`. Then, the popped thread takes access to the critical section. Regardless of `waiters`, `sema_up()` increments the `value`.
 
-According to the semaphore definition, it seems normal to initialize the semaphore's value to a positive number depending on how many resources are available.
+According to the semaphore definition, it seems normal to initialize the semaphore's value to a
+positive number depending on how many resources are available.
 However, we can find that pintos initialize the value with zero and then call `sema_down()`.
-In this case, the caller (i.e., the thread that initialized the semaphore and called `sema_down()`) immediately pushed into `waiters` and then blocked.
-As the caller whose state was running is blocked, another thread in the ready list is selected and becomes the following running thread.
-The selected running thread does its job and then calls `sema_up()` to make the previous running thread become the current running thread again.
-A typical example is the initializing step of the `idle` thread. The `main` thread initializes the semaphore `idle_started` with `value` 0 and calls `sema_down` to pass the control flow to the `idle` thread.
-After the function `idle()` is started, the `idle` thread calls `sema_up()` to give the control flow back to the `main` thread.
+In this case, the caller (i.e., the thread that initialized the semaphore and called `sema_down()`) immediately pushed
+into `waiters` and then blocked.
+As the caller whose state was running is blocked, another thread in the ready list is selected and becomes the following
+running thread.
+The selected running thread does its job and then calls `sema_up()` to make the previous running thread become the current
+running thread again.
+A typical example is the initializing step of the `idle` thread. The `main` thread initializes the
+semaphore `idle_started` with `value` 0 and calls `sema_down` to pass the control flow to the `idle` thread.
+After the function `idle()` is started, the `idle` thread calls `sema_up()` to give the control flow back to the `main`
+thread.
 
 There are other functions for `semaphore` in pintos, `sema_try_down()` and `sema_self_test()`.
 
-`sema_try_down()` is similar to `sema_down()` as it is a kind of P function. However, it works only when the `value` is positive.
+`sema_try_down()` is similar to `sema_down()` as it is a kind of P function. However, it works only when the `value` is
+positive.
 In other words, if the `value` is 0, it returns `false`, and the caller neither enters the `waiters` nor becomes blocked.
 If the `value` is positive, it decreases the `value` by one and returns `true`.
 
 `sema_self_test()` is a function for self-testing.
 
 ### Lock
+
 A Lock is a synchronization primitive like a semaphore. It is used for controlling access to a shared resource like semaphore.
 The semaphore's P(or "down") is "acquire" in the lock, and the V (or "up") of the semaphore is "release" in the lock.
 
 There are two main differences between a lock and a semaphore.
 
 - One is the range of the value can have.
-A Semaphore can have various values larger than 1, but a lock's value can only be 0 or 1.
-In other words, a lock is a binary semaphore.
+  A Semaphore can have various values larger than 1, but a lock's value can only be 0 or 1.
+  In other words, a lock is a binary semaphore.
 
 - Another is the presence of the lock holder.
-In semaphore, there is no owner or holder. It means a thread can "up" the semaphore without being the thread "downed" it.
-In contrast, a lock can only be "released" by the thread that "acquired" it.
+  In semaphore, there is no owner or holder. It means a thread can "up" the semaphore without being the thread "downed"
+  it.
+  In contrast, a lock can only be "released" by the thread that "acquired" it.
 
 Pintos implemented a lock as follows.
 ```c++
@@ -364,16 +376,21 @@ struct lock
     struct semaphore semaphore;     /* Binary semaphore controlling access */
   };
 ```
-As a lock performs like a binary semaphore, it has a `semaphore` as a member variable and a `holder` for the thread holding the lock.
+
+As a lock performs like a binary semaphore, it has a `semaphore` as a member variable and a `holder` for the thread holding
+the lock.
 A function `lock_init()` initializes a lock. There are four functions to implement the lock features.
 
-- `lock_init()`: Initialize `holder` and `semaphore`. Initially, there is no holder, so initialize `holder` with `NULL`.
-As the lock is the binary semaphore, `semaphore` is initialized with the value 1.
-- `lock_acquire()`: Checks whether the `holder` is the caller(it must not), and then invoke `sema_down()`. Then, set the `holder` to the current thread.
-- `lock_release()`: Checks whether the `holder` is the caller(it must be), and then set the `holder` NULL. Then invoke `sema_up()`.
+- `lock_init()`: Initialize `holder` and `semaphore`. Initially, there is no holder, so initialize `holder`
+  with `NULL`.
+  As the lock is the binary semaphore, `semaphore` is initialized with the value 1.
+- `lock_acquire()`: Checks whether the `holder` is the caller(it must not), and then invoke `sema_down()`. Then, set
+  the `holder` tothe current thread.
+- `lock_release()`: Checks whether the `holder` is the caller(it must be), and then set the `holder` NULL. Then
+  invoke `sema_up()`.
 - `lock_try_acquire()`: Lock version of `sema_try_down()`. Acquire the lock only when the `holder` is NULL.
 - `lock_held_by_current_thread()`: `lock_acquire()` and `lock_release()` use this function to check the `holder`.
-It returns `true` if the `holder` is the current thread. Otherwise, it returns `false`.
+  It returns `true` if the `holder` is the current thread. Otherwise, it returns `false`.
 
 ### Condition Variable
 A condition variable is a synchronization primitive designed to solve a synchronization problem.
@@ -573,13 +590,205 @@ find the thread to wake up every single tick!)
 
 ### Overview of Current Implementation
 
+Current implementation of priority scheduling is based on the `ready_list` in FIFO order. It doesn't consider the
+priority of the thread. Based on the state diagram of the thread life cycle, a thread is pushed to `ready_list` when
+`thread_unblock()` and `thread_yield()` is called. Popping a new thread from `ready_list` is done by `schedule()`.
+`thread_unblock()` and `thread_yield()` call `list_push_back()` to push a thread to `ready_list` the end
+of `ready_list`. `schedule()` calls `next_thread_to_run()` to pop a thread from `ready_list`. `next_thread_to_run()`
+returns the first entry of `ready_list`. In summary, the current implementation of priority scheduling is based on the
+naive FIFO queue, which doesn't take account of the priority of the thread.
+
+### Priority Inversion
+
+Priority inversion is a problem that occurs when a high priority thread is waiting for cpu resource that is currently
+being used by a low priority thread. A root cause of this is lock that is used to protect a shared resource. Assume
+there are three threads, H, M, L with priority H > M > L. If H is waiting for a lock A that is currently held by L,
+then M can preempt L. At this point, H is at waiting list of lock A, and L is in ready list. After, M finishes its work,
+it gives cpu to L, which is in waiting list. L will run and release the lock A. Then, H will be able to run. Based on
+the priority of threads, H should run first. However, due to the priority inversion, a run order of threads becomes
+M -> L -> H.
+
+One solution for this is **priority donation**. When a thread is waiting for a lock, it donates its priority to the
+holder of the lock. In the above example, H donates its priority to L. Then, L will have the highest priority followed
+by L and M
+
+Multiple donation is there is multiple donation occurs. If L hold a lock A and B, and M is will to lock A, then
+M will donation its priority to L and go to waiting list of lock A. Next, H comes in then it want to lock B and donate
+its priority to L. This is called multiple donation.
+
+Nested donation is a case of recursive donation of priority. A previous example's donation is between M -> L, H -> L.
+The nested donation is a case of H -> M -> L. As a precondition, L is holding a lock A, and M is holding a lock B and
+requires lock A. If H needs lock B so donate its priority to M only, M still need lock A. However, lock A is held by L,
+which doesn't have any donation. To solve this case, weed need recursive donation of priority from H -> M and M -> L.
+
 ### Data Structures
+
+To achieve priority scheduling, we need to manage `ready_list` in sorted order. Since `ready_list` is implemented as
+`list` in pintos, we can use `list_insert_ordered()` to insert a thread to `ready_list` in sorted order. For this case,
+new data strucutres are not needed.
+
+However, due to priority inversion issue, we need some new member in `struct thread` to manage priority donation.
+
+```c
+struct thread
+  {
+  
+    int original_priority;        /* Original priority of the thread */
+    struct lock *waiting_lock;     /* Lock that the thread is waiting for */
+    struct list donations;        /* List of donations to handle multiple donation */
+    struct list_elem donation_elem;/* List element for donation list */
+  }
+```
 
 ### Algorithms
 
+- Manage `ready_list` sorted
+  One effective way is to make `ready_list` sorted when a thread is pushed to `ready_list` in sorted manner. This can be
+  done by using pre-implemented function `list_insert_ordered()`. This function will insert a thread to `ready_list` in
+  sorted order.
+
+- Acquiring lock
+  When a thread is trying to acquire a lock, following steps are done.
+
+```
+function lock_acquire(struct lock *lock)
+    check if lock is already acquired by other thread
+    if yes,
+        add lock to thread's waiting list
+        add threads to donation list
+        donate priority to the holder of the lock
+    
+    set thread's waiting lock to nil
+    acquire the lock with sema_down
+         
+```
+
+- Donating priority
+  When a thread donates its priority to another thread, following steps are done.
+  The recursive loop to get into depth will resolve the nested donation issue.
+
+```
+function donate_priority(struct thread *donor, struct thread *donee)
+    donee := donee
+   loop 
+        if donor's waiting lock is nil
+            break
+        donee := donor's waiting lock's holder
+        donee -> priority := donor -> priority
+        donor := donee
+         
+```
+
+- Releasing lock
+  When a thread releases a lock, following steps are done.
+
+```
+function lock_release(struct lock *lock)
+    remove lock from thread's waiting list
+    remove thread from donation list
+    refresh thread's priority based on the highest priority in donation list
+    release the lock
+```
+
+- Change of priority in running thread
+  When a thread's priority is changed, following steps are done.
+
+```c
+function thread_set_priority(int new_priority)
+    if current thread has no donation, 
+      change priority to new_priority
+    else 
+      change original_priority to new_priority
+    
+    if new_priority is lower than current priority
+        if next_thread_to_run's priority is higher than current priority
+            yield the cpu
+```
+
 ### Implementation
 
-### Rationale
+Implementation of key functions follows
+
+- `ready_list` management
+
+```c
+list_insert_ordered(&ready_list, &current_thread->elem, thread_priority_cmp, NULL);
+
+static bool thread_priority_cmp(const struct list_elem *a, const struct list_elem *b, void *aux) {
+  return list_entry(a, struct thread, elem)->priority > list_entry(b, struct thread, elem)->priority;
+}
+
+```
+
+- `lock_acquire()`
+
+```c
+void lock_acquire(struct lock *lock) {
+  struct thread *cur = thread_current();
+  struct thread *holder = lock->holder;
+
+  if (holder != NULL) {
+    cur->waiting_lock = lock;
+    list_insert_ordered(&holder->donations, &cur->donation_elem, thread_priority_cmp, NULL);
+    donate_priority(cur, holder);
+  }
+
+  cur->waiting_lock = NULL;
+  sema_down(&lock->semaphore);
+  lock->holder = cur;
+}
+```
+
+- `priority_donation()`
+
+```c
+void donate_priority(struct thread *donor, struct thread *donee) {
+  // TODO: dealing with depth of nested search
+  while (donee->waiting_lock != NULL) { 
+    donee = donee->waiting_lock->holder;
+    donee->priority = donor->priority;
+    donor = donee;
+  }
+}
+```
+
+- `lock_release()`
+
+```c
+void lock_release(struct lock *lock) {
+  struct thread *cur = thread_current();
+  struct thread *holder = lock->holder;
+
+  for (struct list_elem *e = list_begin(&holder->donations); e != list_end(&holder->donations); e = list_next(e)) {
+    struct thread *t = list_entry(e, struct thread, donation_elem);
+    if (t->waiting_lock == lock) {
+      list_remove(e);
+    }
+  }
+  refresh_priority(cur);
+
+  lock->holder = NULL;
+  sema_up(&lock->semaphore);
+}
+```
+
+- `refresh_priority()`
+
+```c
+void refresh_priority(struct thread *t) {
+  t->priority = t->original_priority;
+  if (list_empty(&t->donations)) {
+    t->priority = t->original_priority;
+    return;
+  } 
+  struct thread *max = list_entry(list_max(&t->donations, thread_priority_cmp, NULL), struct thread, donation_elem);
+  if (max->priority > t->original_priority) {
+      t->priority = max->priority;
+      return;
+  }
+}
+```
+
 
 ## Advanced Scheduler
 
